Tuto Sass Mixins OK

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <h1>TEST_SASS_CLI_&_GIT_TOOLS_FROM_ATOM</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <h1>TEST_SASS_CLI_&_GIT_TOOLS_FROM_ATOM_ &_Browser-sync</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
 
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
 
         <div class="demo">
-
+            <h2>TEST_MIXINS_CSS</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae provident, distinctio illum illo quia sed deserunt quas veniam quis, accusantium quod, architecto impedit laboriosam tenetur dolorum laborum voluptatum molestias rem.
+                </p>
         </div>
 
     </body>
