--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
                 </p>
         </div>
 
+        <div class="demo2">
+            <h2>TEST_EXTEND_CLASS</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae provident, distinctio illum illo quia sed deserunt quas veniam quis, accusantium quod, architecto impedit laboriosam tenetur dolorum laborum voluptatum molestias rem.
+                </p>
+        </div>
+
     </body>
 </html>
